<resources>

    <string name="app_name">Clothes Catalog</string>

    <!-- Action bar titles. -->
    <string name="inventory_action_bar_title">Inventory</string>
    <string name="add_product_title">Add a new product</string>
    <string name="update_product_title">Update a product</string>

    <!-- Snackbar messages. -->
    <string name="add_product_failed_message">Failed to add a new product</string>
    <string name="update_product_failed_message">Failed to update this product</string>
    <string name="delete_product_failed_message">Failed to delete this product</string>
    <string name="delete_all_products_failed_message">Failed to delete all products</string>
    <string name="check_form_message">Check form for empty fields or errors</string>
    <string name="no_phone_app_message">Download a phone app to dial this call</string>
    <string name="no_email_app_message">Download an email app to send this message</string>

    <!-- Action bar labels. -->
    <string name="action_add_dummy_product_label">Add a dummy product</string>
    <string name="action_delete_all_products_label">Delete all products</string>
    <string name="action_delete_product_label">Delete product</string>

    <!-- Empty list text labels. -->
    <string name="empty_list_primary_label">It\'s a bit lonely here…</string>
    <string name="empty_list_secondary_label">Get started by adding a product</string>

    <!-- Button labels and strings. -->
    <string name="sale_button_label">Sale</string>
    <string name="sale_button_content_description">Decrement this product\'s quantity by 1</string>
    <string name="add_product_button_tooltip">Add product</string>
    <string name="add_product_button_content_description">Add a new product to the catalog</string>
    <string name="change_photo_button_label">Change photo</string>
    <string name="change_photo_button_content_description">Launch options to change this product\'s photo</string>
    <string name="decrement_quantity_button_label">-</string>
    <string name="decrement_quantity_button_tooltip">Decrement quantity</string>
    <string name="decrement_quantity_button_content_description">Decrement this product\'s quantity</string>
    <string name="increment_quantity_button_label">+</string>
    <string name="increment_quantity_button_tooltip">Increment quantity</string>
    <string name="increment_quantity_button_content_description">Increment this product\s quantity</string>
    <string name="call_supplier_button_label">Call supplier</string>
    <string name="call_supplier_button_content_description">Call this product\s supplier</string>
    <string name="email_supplier_button_label">Email supplier</string>
    <string name="email_supplier_button_content_description">Email this product\s supplier</string>
    <string name="save_product_button_tooltip">Save product</string>
    <string name="save_product_button_content_description">Save and close this product</string>

    <!-- Image view strings. -->
    <string name="photo_image_view_content_description">This product\'s photo</string>

    <!-- EditText hints. -->
    <string name="name_hint">Name</string>
    <string name="price_hint">Price</string>
    <string name="quantity_hint">Quantity</string>
    <string name="supplier_hint">Supplier</string>
    <string name="supplier_phone_number_hint">Supplier Phone Number</string>
    <string name="supplier_email_hint">Supplier Email</string>

    <!-- EditText error messages. -->
    <string name="text_invalid_error_message">Enter a value between 1 and 250 characters</string>
    <string name="price_invalid_error_message">Enter a price between $0.00 and $9,999,999.99</string>
    <string name="quantity_invalid_error_message">Enter a quantity between 0 and 999,999,999</string>
    <string name="phone_number_invalid_error_message">Enter a valid phone number</string>
    <string name="email_invalid_error_message">Enter a valid email address</string>

    <!-- Dialog strings. -->
    <string name="delete_all_products_confirmation_dialog_message">Delete all products?</string>
    <string name="delete_product_confirmation_dialog_message">Delete this product?</string>
    <string name="generic_delete_dialog_button_label">Delete</string>
    <string name="generic_cancel_dialog_button_label">Cancel</string>
    <array name="change_photo_dialog_item_labels">
        <item>Take new photo</item>
        <item>Remove photo</item>
        <item>Select new photo</item>
    </array>

    <!-- Supplier email strings. -->
    <string name="email_supplier_subject">Request for more \"%1$s\"</string>
    <string name="email_supplier_message">Hello,\n\nI am requesting more of the product \"%1$s\" in the next shipment. We only have %2$d left in stock.\n\nSent from Clothes Catalog app.</string>

</resources>