<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/detail_scroll_view_bottom_margin"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/detail_activity_horizontal_margin">

            <!-- Name field. -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_text_input_layout"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_edit_text_vertical_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_hint"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Price field. -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/price_text_input_layout"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_edit_text_vertical_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_text_input_layout"
                app:startIconDrawable="@drawable/ic_price">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/price_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price_hint"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Quantity field. -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/quantity_text_input_layout"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_edit_text_vertical_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/price_text_input_layout"
                app:startIconDrawable="@drawable/ic_quantity">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/quantity_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/quantity_hint"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/decrement_quantity_button"
                style="@style/SecondaryButtonStyle"
                android:layout_width="@dimen/quantity_button_size"
                android:layout_height="@dimen/quantity_button_size"
                android:contentDescription="@string/decrement_quantity_button_content_description"
                android:text="@string/decrement_quantity_button_label"
                app:layout_constraintEnd_toStartOf="@id/increment_quantity_button"
                app:layout_constraintTop_toBottomOf="@id/quantity_text_input_layout" />

            <Button
                android:id="@+id/increment_quantity_button"
                style="@style/SecondaryButtonStyle"
                android:layout_width="@dimen/quantity_button_size"
                android:layout_height="@dimen/quantity_button_size"
                android:contentDescription="@string/increment_quantity_button_content_description"
                android:text="@string/increment_quantity_button_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/quantity_text_input_layout" />

            <!-- Supplier field. -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/supplier_text_input_layout"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_edit_text_vertical_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/decrement_quantity_button"
                app:startIconDrawable="@drawable/ic_supplier">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/supplier_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/supplier_hint"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Picture field. -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/picture_text_input_layout"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_edit_text_vertical_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/supplier_text_input_layout"
                app:startIconDrawable="@drawable/ic_picture">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/picture_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/picture_hint" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <!-- Save product button. -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_product_button"
        android:layout_width="@dimen/save_product_button_size"
        android:layout_height="@dimen/save_product_button_size"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/save_product_button_margin"
        android:contentDescription="@string/save_product_button_content_description"
        android:src="@drawable/ic_save" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>